--- a/plugin.xml
+++ b/plugin.xml
@@ -10,13 +10,13 @@
             objectClass="org.eclipse.core.resources.IProject">
           <menu
              id="org.eclipse.ui.articles.action.contribution.navigator.subMenu"
-             label="smartdb_watcher"
+             label="HIBIKI"
              path="additions">
           <separator name="group1"/>
           </menu>
           <action
              id="org.eclipse.ui.articles.action.contribution.navigator.action2" 
-             label="配置"
+             label="MediaDeployer"
              icon="icons/red_dot.gif"
           menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
              class="jp.co.dreamarts.plugin.mediadeployer.actions.MediaDeployer"
@@ -24,20 +24,13 @@
           </action> 
            <action
              id="test.actions.SampleAction" 
-             label="启动"
+             label="ServiceStart"
              icon="icons/red_dot.gif"
           menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
              class="jp.co.dreamarts.plugin.mediadeployer.actions.ServiceStarter"
           enablesFor="1">
           </action> 
-          <action
-             id="org.eclipse.ui.articles.action.contribution.navigator.action2" 
-             label="停止"
-             icon="icons/red_dot.gif"
-          menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
-             class="jp.co.dreamarts.plugin.mediadeployer.actions.ServiceStoper"
-          enablesFor="1">
-          </action> 
+          
          <visibility>
             <objectState
                   name="projectNature"
