--- a/plugin.xml
+++ b/plugin.xml
@@ -16,7 +16,7 @@
           </menu>
           <action
              id="org.eclipse.ui.articles.action.contribution.navigator.action2" 
-             label="MediaDeployer"
+             label="HIBIKI_START"
              icon="icons/red_dot.gif"
           menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
              class="jp.co.dreamarts.plugin.mediadeployer.actions.MediaDeployer"
@@ -24,10 +24,10 @@
           </action> 
            <action
              id="test.actions.SampleAction" 
-             label="ServiceStart"
+             label="HIBIKI_CLOSE"
              icon="icons/red_dot.gif"
           menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
-             class="jp.co.dreamarts.plugin.mediadeployer.actions.ServiceStarter"
+             class="jp.co.dreamarts.plugin.mediadeployer.actions.ServiceCloser"
           enablesFor="1">
           </action> 
           
