--- a/build.properties
+++ b/build.properties
@@ -3,4 +3,11 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               lib/apache-commons-lang.jar,\
+               lib/jna-3.0.9.jar,\
+               lib/log4j-1.2.17.jar
+src.includes = META-INF/,\
+               lib/
+jars.compile.order = .,\
+                     lib/
