--- a/plugin.xml
+++ b/plugin.xml
@@ -10,26 +10,25 @@
             objectClass="org.eclipse.core.resources.IProject">
           <menu
              id="org.eclipse.ui.articles.action.contribution.navigator.subMenu"
-             label="HIBIKI"
+             label="Media Deployer"
              path="additions">
           <separator name="group1"/>
           </menu>
-          <action
-             id="org.eclipse.ui.articles.action.contribution.navigator.action2" 
-             label="HIBIKI_START"
-             icon="icons/red_dot.gif"
-          menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
-             class="jp.co.dreamarts.plugin.mediadeployer.actions.MediaDeployer"
-          enablesFor="1">
-          </action> 
            <action
-             id="test.actions.SampleAction" 
-             label="HIBIKI_CLOSE"
-             icon="icons/red_dot.gif"
+             id="org.eclipse.ui.articles.action.contribution.navigator.stop" 
+             label="STOP"
           menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
              class="jp.co.dreamarts.plugin.mediadeployer.actions.ServiceCloser"
           enablesFor="1">
           </action> 
+          <action
+             id="org.eclipse.ui.articles.action.contribution.navigator.start" 
+             label="START"
+          menubarPath="org.eclipse.ui.articles.action.contribution.navigator.subMenu/group1" 
+             class="jp.co.dreamarts.plugin.mediadeployer.actions.MediaDeployer"
+          enablesFor="1">
+          </action> 
+          
           
          <visibility>
             <objectState
