--- a/smartDB_watcher6/build.properties
+++ b/smartDB_watcher6/build.properties
@@ -4,9 +4,8 @@ bin.includes = plugin.xml,\
                META-INF/,\
                .,\
                icons/,\
-               lib/apache-commons-lang.jar,\
-               lib/jna-3.0.9.jar,\
-               lib/log4j-1.2.17.jar
+               lib/,\
+               lib/org.eclipse.ui.console_3.5.100.v20110511.jar
 src.includes = META-INF/,\
                lib/
 jars.compile.order = .,\
